src/objects/Account_Legal_Representative__c.object
<CustomObject>
    <description>Legal Representative</description>
    <fields>
        <fullName>Birth_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Type_Abbreviation__c</fullName>
        <formula>CASE( TEXT(Personal_Type__c), &quot;L&quot;, &quot;DNI&quot;, &quot;E&quot;, &quot;CE&quot;, &quot;C&quot;, &quot;CFFP&quot;, &quot;A&quot;, &quot;CFFAA&quot;, &quot;P&quot;, &quot;PAS&quot;, &quot;R&quot;, &quot;RUC&quot;, &quot;T&quot;, &quot;LT&quot;, &quot;V&quot;, &quot;DPI&quot;, &quot;O&quot;, &quot;Otros&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Type Abbreviation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Personal Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Type__c</fullName>
        <label>Personal Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                    <label>LT</label>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position_Begin_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Position Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Payer_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tax Payer Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>account_id__c</fullName>
        <label>account_id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Legal Representatives</relationshipLabel>
        <relationshipName>Account_Legal_Representatives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>unique_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Account Legal Representative</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Legal Representative</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>